refactor(all): move to gradle modules, use blw library wrarpper