@@ -1,50 +1,61 @@
-plugins {
-    id 'java'
-    id 'maven-publish'
+allprojects {
+    group 'me.darknet'
+    version '2.0.0'
 }
 
-group = 'me.darknet.assembler'
-version = '2.0.0'
+subprojects {
+    apply plugin: 'java-library'
 
-repositories {
-    mavenCentral()
-}
-
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(11)
+    repositories {
+        mavenCentral()
+        mavenLocal()
+        maven { url 'https://jitpack.io' }
     }
-}
 
-task sourcesJar(type: Jar) {
-    from sourceSets.main.allSource
-    archiveClassifier.set('sources')
-}
+    apply plugin: 'maven-publish'
 
-dependencies {
-
-    // asm-tree
-    implementation 'org.ow2.asm:asm:9.2'
-    implementation 'org.ow2.asm:asm-commons:9.2'
-    implementation 'org.ow2.asm:asm-util:9.2'
-    implementation 'org.ow2.asm:asm-analysis:9.2'
-    implementation 'org.ow2.asm:asm-tree:9.2'
-    implementation 'org.jetbrains:annotations:24.0.0'
-
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-}
-
-test {
-    useJUnitPlatform()
-}
-
-// publish with sources
-publishing {
-    publications {
-        maven(MavenPublication) {
-            from components.java
-            artifact sourcesJar
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(17)
         }
     }
+
+    test {
+        useJUnitPlatform()
+
+        testLogging {
+            events "passed", "skipped", "failed"
+        }
+        jvmArgs '--enable-preview'
+    }
+
+    dependencies {
+        // jetbrains annotations
+        implementation 'org.jetbrains:annotations:22.0.0'
+    }
+
+    publishing {
+        repositories {
+            mavenLocal()
+            maven {
+                name = 'sources-repo'
+                url = 'file:///tmp/sources-repo'
+            }
+        }
+        publications {
+            maven(MavenPublication) {
+                from components.java
+            }
+        }
+    }
+
+    plugins.withType(JavaPlugin).configureEach {
+        dependencies {
+            testImplementation platform('org.junit:junit-bom:5.9.1')
+            testImplementation 'org.junit.jupiter:junit-jupiter'
+        }
+    }
+
+    tasks.withType(JavaCompile)*.options*.compilerArgs*.add '--enable-preview'
+
 }
